--- a/03. Продажа квартир в Санкт-Петербурге — анализ рынка недвижимости/03_sale_apartments.ipynb
+++ b/03. Продажа квартир в Санкт-Петербурге — анализ рынка недвижимости/03_sale_apartments.ipynb
@@ -2719,7 +2719,7 @@
     "\n",
     "Оставляем\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -3318,7 +3318,7 @@
     " - rooms (число комнат)\n",
     " - ceiling_height (высота потолков (м))\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -3543,7 +3543,7 @@
     "- **ceiling_height (высота потолков)**. Подавляющее большинство обхявлении имеют значение этого парамента от 2 до 3 метров\n",
     "\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -3675,7 +3675,7 @@
     "- Еще мы увидели, что на первом этаже квартиры продаются хуже )\n",
     "    \n",
     "- Продажу быстрее 45 дней можно считать очень успешной (ниже, чем первый квартиль)\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -3751,7 +3751,7 @@
     "    \n",
     "- **Минимум** как максимум из: среднего - n стандартных отклонения и нуля\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -3835,7 +3835,7 @@
     "\n",
     "Видим сильную зависимость стоимости квартиры от площади\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -3908,7 +3908,7 @@
     "\n",
     "Зависимость сильная, но меньше, чем от общей площади\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -3981,7 +3981,7 @@
     "\n",
     "Зависимость сильная\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -4057,7 +4057,7 @@
     "    \n",
     "*Акция: накопи на 7 комнат, 8-я в подарок!*\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -4132,7 +4132,7 @@
     "\n",
     "Но эта связь неоднородна\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -4195,7 +4195,7 @@
     " - Видны пики в районе 43 км и 55 км от центра - это пригородные города\n",
     "\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -4251,7 +4251,7 @@
     "    \n",
     " - Последний этаж чуть дешевле средних\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -4421,7 +4421,7 @@
     "    \n",
     " - Зависимость стоимости квартиры от месяца и дня размещения не просматривается\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -4494,7 +4494,7 @@
     "Зависимость умеренно-высокая. \n",
     "Но эта зависимость не линейная\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -4683,7 +4683,7 @@
     " - самые дорогие квартиры в **Пушкине**\n",
     " - самые бютжетные - в **Гатчине**\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -4708,7 +4708,7 @@
     "\n",
     "Рассмотрим поближе график для определение центра города\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -4750,7 +4750,7 @@
     "\n",
     "Возьмем за центральную города ту часть города, которая лежит от непосредственного центра в радиусе 3 км - именно тут мы видим сильный перегиб по стоимоти квартиры\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -5059,7 +5059,7 @@
     "\n",
     "Зависимость есть, но она меньше, чем в целом по \"больнице\"\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -5163,7 +5163,7 @@
     "    \n",
     "Но на самом деле, таких объявлений очень мало, чтобы делать такие выводы\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -5217,7 +5217,7 @@
     "\n",
     "Интересно, что в центре в 2018-2019 годах мы не видим значительного роста стоимости квартир (в отличие от данных по всем объявлениям в целом)\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -5292,7 +5292,7 @@
     "\n",
     "Интересно, что в центральной части зависимость цены квартиры от расстояния до центра слабая (коэффициент корреляции 0.12) в отличие от всех объявлений в целом (коэффициент корреляции 0.20)\n",
     "   \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -5334,7 +5334,7 @@
     "\n",
     "И тут связь меньше, чем по всем объявлениям\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
