--- a/04. Определение выгодного тарифа для телеком компании/04_best_tariff.ipynb
+++ b/04. Определение выгодного тарифа для телеком компании/04_best_tariff.ipynb
@@ -1122,7 +1122,7 @@
     "    \n",
     " - при работе с числами часто видим, что Pandas некоторым столбцам присвоил избыточные типы данных, которые занимают лишнее место в памяти. Такие столбцы тоже приобразуем в соответствующий тип\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -1305,7 +1305,7 @@
     "\n",
     "Удалим его \n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -1456,7 +1456,7 @@
     "Поэтому насчитаем дополнительную колонку в датафрейме Calls, поторая будет показывать количество потраченных минут\n",
     "\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -1970,7 +1970,7 @@
     "    \n",
     "Объединим данные\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -2411,7 +2411,7 @@
     "    \n",
     "Перерасход по трафику округляем до гигабайт в большую сторону в соответствии с политикой Мегалайна\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -2448,7 +2448,7 @@
     "    \n",
     "Посчитаем помесячную выручку для каждого пользователя как сумму абонентской платы и платы за перерасход\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -2480,7 +2480,7 @@
     "А если их учитывать, то все не так очевидно.\n",
     "    \n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -2577,7 +2577,7 @@
     " - по сообщениям: 0%\n",
     " - по интернет трафику: 13%\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -2683,7 +2683,7 @@
     "    \n",
     "Посчитаем основные статистики, харакретизующие распределения кол-ва звонков, сообщений и объем интернет трафика в разрезе тарифов\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -2735,7 +2735,7 @@
     "    \n",
     "Чтобы не испортить исходные данные, будем создавать временный столбец 'mb_used_sum_temp', а потом его удалим\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -2811,7 +2811,7 @@
     "Т.е. если данные типа float, то значению статистики от присваивает такой же тип. А т.к. float16 не достаточно для таких больших значений нашем случае, он присваивает inf\n",
     "\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -2961,7 +2961,7 @@
     "    \n",
     "Мы видим, что разброс значений в тарифе ultra выше. Это не увивительно, ведь в этом тарифе намного больший объем опций идет бесплатно. И его пользователи не думают о перерасходе. \n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -3008,7 +3008,7 @@
     "    \n",
     "2. Построим график \"ящик с усами\" для еще более наглядной визуализации распределений\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -3281,7 +3281,7 @@
     " - **Нулевая гипотеза:** средняя выручка пользователей из Москвы не отличается от выручки пользователей других регионов\n",
     " - **Альтернативная гипотеза:** средняя выручка пользователей из Москвы и других регионов отличаются\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -3363,7 +3363,7 @@
     "\n",
     "По среднему значению делаем вывод, что средняя выручка тарифа ultra значимо выше средней выручка тарифа smart\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -3427,7 +3427,7 @@
     "    \n",
     "Не можем отвергнуть нулевую гипотезу, т.е. мы не можем утверждать с заданной степенью уверенности, что средние выборок Москвы и других городов отличаются\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -3730,7 +3730,7 @@
     "    \n",
     "И побеждает боец в синем углу ринга: smart. Он берет большинством\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -3774,7 +3774,7 @@
     "    По данным выборок, которые у нас есть, мы не можем сделать вывод, что средние выручки пользователей Москвы и других городов отличаются.\n",
     "    \n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
