--- a/05. Исследование успеха компьютерных игр/05_games_success.ipynb
+++ b/05. Исследование успеха компьютерных игр/05_games_success.ipynb
@@ -423,7 +423,7 @@
     "    \n",
     " - столбец user_score (оценка пользователей) должен иметь числовой тип данных. tbd - это, скорее всего, означает To Be   Determined. То есть \"будет отпределено\". Это означает, что данных нет\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -826,7 +826,7 @@
     "    \n",
     "Посмотрим, на две записи с отсутствующим значением в столбце name\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -928,7 +928,7 @@
     "    \n",
     "Эти записи нам не подходят, т.к. помимо имени и жанра мы не видим рейтнги - показатель успешности игры\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -971,7 +971,7 @@
     "\n",
     "    \n",
     "3. Столбцы оценка критиков (critic_score) и user_score восстанавливать не будем, т.к. очень большой процент пропусков. И это может исказить данные\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -1154,7 +1154,7 @@
     "    \n",
     "Не намного, но стало лучше: в столбце year_of_release 16455 значений заполнено, до этого было 16446 ))\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -1313,7 +1313,7 @@
     "    \n",
     "В столбце rating тоже часть данных восстановили: year_of_release 10365 значений заполнено, до этого было 9949\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -1743,7 +1743,7 @@
     " - начиная с 2008 мы видим падение кодичества игр, связанное со структурными изменениями в отрасли: появляются сетевые игры, в которые играют годами: время, когда люди покупали игру убивали финального босса и идут за новой проходит\n",
     " - с 2012 года видим стабилизацию количества игр\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -2161,7 +2161,7 @@
     " - если количество игр стабилизировалось, то продажи лицензий в штуках продолжают падать. это объясняется так изменением стукруты отрасли: однажды купив игру пользователь играет в нее несколько лет и не приобретает ее кажды рах заново\n",
     " - платформы появляются и исчезают. при этом есть зарактерный \"путь жизни\" платформы: он длится примерно 6-10 лет. Включает в себя симметрийчный рост и падение\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -2186,7 +2186,7 @@
     "    \n",
     "Выберем период, начиная с 2012 года, когда структура отрасли стабилизировалась\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -2260,7 +2260,7 @@
     " - платформы XOne и PS4, скорее всего, находятся в фазе роста. Падение в 2016 году связано с тем, что данные не могут быть не полными\n",
     " - платформs 3DS и WiiU появились в 2011 и 2012 годах и мы не видим резкого падения продаж в 2012-2015 годах. В 2016, возможно, был рост\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -2541,7 +2541,7 @@
     "    \n",
     "Видно, что у разных ирг внутри платформ сильно различаются продажи\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -2652,7 +2652,7 @@
     "    \n",
     "Но, такая картина верна не для всех платформ: например, для платформ WiiU и 3DS (особенно WiiU) мы видим прямую корреляцию продаж от оценки пользователей\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -2840,7 +2840,7 @@
     " - и два претендента на бронзу: Role-Playing и Sports.\n",
     " - остальные жанры сильно отстают\n",
     "   \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -2885,7 +2885,7 @@
     "\n",
     "Если судить по медианному значению продаж ирг, то в среднем одна игра жанра Shooter продается намного большим числом копий, чем другие жанры\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -2983,7 +2983,7 @@
     "    \n",
     "Продажи в Северной Америке и Европе выше, но и падают они быстрее. В Северной Америке оно выражено в наибольшей степени\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -3201,7 +3201,7 @@
     "    \n",
     " - в остальных регионах выделяется PlayStation (около 60%) и X360 (13%)\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -3404,7 +3404,7 @@
     "    \n",
     " - в спортивные игры (Sports) играют в большей степени в Европе, Северной Америке и регионе other (около 14%). В Японии этот жанр не так популярен    \n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -3531,7 +3531,7 @@
     "    - около 32% на \"T - Для подростков\"    \n",
     "    - около 10% на \"E10+ - Для всех от 10 лет\"        \n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -3573,7 +3573,7 @@
     " - **Нулевая гипотеза:** Средние пользовательские рейтинги жанров Action и Sports одинаковые\n",
     " - **Альтернативная гипотеза:** Средние пользовательские рейтинги жанров Action и Sports разные\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -3626,7 +3626,7 @@
     "    \n",
     "Для проверки гипотезы будем брать период, в котором обе платформы существовали. Это 2013-2016 года\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -3736,7 +3736,7 @@
     "    \n",
     "Не можем отвергнуть нулевую гипотезу, т.е. мы не можем утверждать с заданной степенью уверенности, что средние пользовательских рейтингов платформ Xbox One и PC отличаются\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -3796,7 +3796,7 @@
     "    \n",
     "Оставляем весь период\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -3899,7 +3899,7 @@
     "\n",
     "По среднему значению делаем вывод, что средний пользовательский рейтинги жанра Action значимо выше среднего пользовательского рейтинга жанра Sports\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -3936,7 +3936,7 @@
     " - продажи ирг по платформам, находящимся в фазе стагнации (WiiU)    \n",
     " - остальными платформами пренебрежем\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -4261,7 +4261,7 @@
     " - Наш прогноз по этим двум платформам: он будет примерно равен продажам 2015-го\n",
     "    \n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -4532,7 +4532,7 @@
     " - Мы видим, что эти платформы сейчас теряют около половины продаж ежегодно. 2016 исключаем как не полный.\n",
     " - Наш прогноз по этим трем платформам: продажи будут примерно в 4 раза ниже уровня 2015 года\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -4712,7 +4712,7 @@
     " - Эта платформа выглядит стабильной или начинающей падение\n",
     " - Наш прогноз по этой платформе: продажи будут примерно в 2 раза ниже уровня 2015 года\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -4737,7 +4737,7 @@
     "    \n",
     "Сложим все, что спрогнозировали\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -4813,7 +4813,7 @@
     "3. Сделали прогноз общих продпж на 207 год: 201 миллион копий\n",
     "\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
