--- a/06. Классификаиция клиентов телеком компании/06_tariff_recommendation.ipynb
+++ b/06. Классификаиция клиентов телеком компании/06_tariff_recommendation.ipynb
@@ -554,7 +554,7 @@
     "\n",
     "    На тестовой выборке проверим лучшие модели каждого типа\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -713,7 +713,7 @@
     "    \n",
     "    На тестовой выборке модель Random Forest так же показала наилучший результат: accuracy = 0.806\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -739,7 +739,7 @@
     "    Интересно, что тут имеется ввижу.\n",
     "    Проверим, что модели хотя бы не предсказывают каждый раз одно и то же значение\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -852,7 +852,7 @@
     "    Ну, по крайней мере, модели предсказывают не одно и то же значение\n",
     "    \n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -896,7 +896,7 @@
     "    \n",
     "    Проверим, что покажет DummyClassifier на разных стратегиях\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -1021,7 +1021,7 @@
     "    \n",
     "    Наша лучшая модель, что неплохо, выигрывает ))\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -1075,7 +1075,7 @@
     "**Лучший результат показала модель Random Forest**\n",
     "    \n",
     "   \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
