--- a/07. Прогнозирование оттока клиента Банка/07_outflow_bank_customers.ipynb
+++ b/07. Прогнозирование оттока клиента Банка/07_outflow_bank_customers.ipynb
@@ -156,7 +156,7 @@
     "    \n",
     "    На тестовых будем учиться, на валидационных проверять, а тестовые данные оставим для финаьной проверки лучших моделей\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -468,7 +468,7 @@
     "    \n",
     "    \n",
     "    Функции будут сохранять в DataFrame F1-меру и AUC-ROC для каждой комбинации параметров и возвращать одну строку с максимальным значением F1-меры\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -657,7 +657,7 @@
     "    \n",
     "    Попробуем найти оптимальные параменты моделей без учета дисбаланса классов \n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -907,7 +907,7 @@
     "     - уменьшение выборки большего класса\n",
     "    \n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -1086,7 +1086,7 @@
     "Останемся, вдруг будет еще лучше )\n",
     "    \n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -1289,7 +1289,7 @@
     "    \n",
     "Не зря остались\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -1688,7 +1688,7 @@
     "    \n",
     "**Проверим их на тестовых данных**\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -2035,7 +2035,7 @@
     " \n",
     " Модель была обучена с учетом дисбаланса классов: предварительно была увеличена доля меньшего класса на обучающей выборке в три раза\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
