--- a/08. Определение наиболее выгодного региона нефтедобычи/08_location_well_drilling.ipynb
+++ b/08. Определение наиболее выгодного региона нефтедобычи/08_location_well_drilling.ipynb
@@ -268,7 +268,7 @@
     "    \n",
     "    С учетом того, что таких данных не много, удалим их\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -326,7 +326,7 @@
     "    \n",
     "    Посмотрим масштаб признаков f0, f1, f2\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -420,7 +420,7 @@
     "    \n",
     "    Видим, что масштаб всех трех признаков сопоставимый, поэтому масштабирование применять не будем\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -619,7 +619,7 @@
     "    Разделив общий бюджет на количество скважин, получим бюджет на одну скважину.\n",
     "    Разделив бюджет на одну скважину на цену продукта, получим безубыточный объем скважины\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -661,7 +661,7 @@
     "Безубыточный объем скважины равен 111.11 тыс. баррелей.\n",
     "    \n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -698,7 +698,7 @@
     "Возвращает совокупный предполагаемый доход в результате освоения отобранных скважин\n",
     "\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -736,7 +736,7 @@
     "    \n",
     "    Создадим и наполним словарь, ключами которого будут регионы, а значениями показатели прибыли, полученные техникой Bootsrap\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -789,7 +789,7 @@
     "    \n",
     "    Построим распределение прибыли по регионам, чтобы оценить ее визуально\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
