--- a/09. Исследование технологического процесса очистки золота/09_gold_purification.ipynb
+++ b/09. Исследование технологического процесса очистки золота/09_gold_purification.ipynb
@@ -4536,7 +4536,7 @@
     "    \n",
     "    Проверим расчет эффективности обогащения\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -4601,7 +4601,7 @@
     "    \n",
     "    Это хорошо, после предобраборки данных, нужно будет этот параметр пересчитать, т.к. данные, на основе которых он расчитывается, могут измениться\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -4626,7 +4626,7 @@
     "    \n",
     "    Посмотрим, какие столбцы есть в тестовой выбрке и нет в тренировочной. И наоборот \n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -4734,7 +4734,7 @@
     "    \n",
     "    Удалим из тренировочной выборки столбцы, не доступные нам в тестовой выборке (кроме целевых признаков)\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -4795,7 +4795,7 @@
     "    \n",
     "    Посмотрим пропуски\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -5270,7 +5270,7 @@
     "    \n",
     "    Посмотрим, распределение гранул сырья в обоих выборках\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -5375,7 +5375,7 @@
     "    \n",
     "    Распределения похожи, но не так сильно, как хотелось бы.\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -5729,7 +5729,7 @@
     "    \n",
     "    Посмотрим, сколько пропусков в строчках\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -5772,7 +5772,7 @@
     "    \n",
     "    В тренировочной выборке есть одна строчка с 44 пропусками! Это много, удалим ее.\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -5806,7 +5806,7 @@
     "    Напишем функцию (recovering), которая будет принимать столбец значений и возвращать столбец с восстановленными данными\n",
     "    \n",
     "   \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -5986,7 +5986,7 @@
     "    - интересно, что на входе золота и серебра было примерно поровну )\n",
     "    \n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -6011,7 +6011,7 @@
     "    \n",
     "    Добвим суммарные концентрации в данные и построим распределения\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -6067,7 +6067,7 @@
     "    Видно, что есть пики около нуля, указывающие на нулевую суммарную концентрацию веществ.\n",
     "    Скорее врего, в этих случаях были ошибки в замером. Удалим такие строчки\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -6185,7 +6185,7 @@
     "    \n",
     "    Мы восстановили данные на полной выборке, теперь разобьем ее на тестовую и тренировочную, отобрав те же строчки, что и при первичном исхлдном разбиении\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -6275,7 +6275,7 @@
     "     - reg_no_grid. Применяется для моделей, в которых не используем тюнинг гиперпараметров. Возвращает значение smape.\n",
     "     - reg_no_grid. Применяется для моделей, в которых используем тюнинг гиперпараметров. Возвращает гиперпараметры лучшей подобранной модели и ее smape.\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -6704,7 +6704,7 @@
     "    - 'n_estimators': 21\n",
     "\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -6843,7 +6843,7 @@
     "    - 'max_features': 'log2'\n",
     "    - 'n_estimators': 26\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
