--- a/10. Защита данных клиентов страховой компании/10_personal_data_protection.ipynb
+++ b/10. Защита данных клиентов страховой компании/10_personal_data_protection.ipynb
@@ -590,7 +590,7 @@
     "    \n",
     "Сгенерируем случайную матрицу и проверим ее на обратимость\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -653,7 +653,7 @@
     "    \n",
     "Преобразуем данные и проверим качество модели\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -721,7 +721,7 @@
     "- качество модели идентичное\n",
     "- пресказания совпадают\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -752,7 +752,7 @@
     "    \n",
     "    \n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
