--- a/11. Построение модели определения стоимости автомобиля/11_cost_car.ipynb
+++ b/11. Построение модели определения стоимости автомобиля/11_cost_car.ipynb
@@ -625,7 +625,7 @@
     "\n",
     "Построим распределения значений цены, пробега и мощности для определения выбросов\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -738,7 +738,7 @@
     "\n",
     "Посмотрим на график мощности по-ближе\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -814,7 +814,7 @@
     " - мощность. видим много выбросов в сторону больших значений, а так же много значений с нулевой мощностью\n",
     " - пробег. значения вполне вменяемые\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -853,7 +853,7 @@
     "    \n",
     "2.  Пропуски в категориальных переменных заполним значением \"no answer\"\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -1045,7 +1045,7 @@
    "source": [
     "<div style=\"border:solid blue 2.0px; padding: 10px\"> \n",
     "Вычислим возраст авто на момент скачивания анкеты\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -1141,7 +1141,7 @@
    "source": [
     "<div style=\"border:solid blue 2.0px; padding: 10px\"> \n",
     "Проверим распределения после чистки\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -1238,7 +1238,7 @@
    "source": [
     "<div style=\"border:solid blue 2.0px; padding: 10px\"> \n",
     "Стало лучше )\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -1585,7 +1585,7 @@
     "    \n",
     "Напишем функцию rmse_scorer, которая будет принимать на вход действительные значения и предсказания модели, а возвращать значение метрики rmse\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -2537,7 +2537,7 @@
     "    \n",
     "Соберем данные о времени обучения и предсказания в одном месте\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -2696,7 +2696,7 @@
     "    - objective = 'regression'\n",
     "    - subsample = 0.8\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -2896,7 +2896,7 @@
     "По совокупности параметров, **лучше всего себя показала модель LGBMRegressor**\n",
     "Она показывает хорошее качетво, не сильно уступая CatBoostRegressor, но является быстрейшей с явным преимущестовм.\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
