--- a/12. Прогнозирование количества заказов такси на следующий час/12_predict_taxi_orders.ipynb
+++ b/12. Прогнозирование количества заказов такси на следующий час/12_predict_taxi_orders.ipynb
@@ -341,7 +341,7 @@
     "Данные сожержат количество дату с гранулярностью в 10 мин и суммарное количество заказов за этот промежуток времени.\n",
     "\n",
     "Пропусков нет\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -369,7 +369,7 @@
     " - ресемплируем данные до одного часа, просуммировав количество заказов в каждом часу\n",
     "    \n",
     "Пропусков нет\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -458,7 +458,7 @@
     "   -  временной ряд разложен на тренд, сезонность и остатки\n",
     "   -  добавлены скользящее среднее и стандартное отклонение\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -619,7 +619,7 @@
     " - остатки. необъясненная трендами и сезонностью дисперсия\n",
     "    \n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -652,7 +652,7 @@
     "Отделим от данных тестовую выборку, составляющую 10 процентов от всей, и отложим ее в сторону.\n",
     "Все остальное потом будем делить на обучающую и валидационную\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -700,7 +700,7 @@
     "\n",
     "    \n",
     "Она нам будет полезна при автоматическом подборе оптимального отставания и ширины окна\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -768,7 +768,7 @@
     "    \n",
     "Функция **timeline_find_parametrs_grid** предназначена для моделей, в которых мы перебираем гиперпараметры\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -867,7 +867,7 @@
     "\n",
     "Попробуем несколько разных моделей\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -1524,7 +1524,7 @@
     "     - max_lag = 3\n",
     "     - rolling_mean_size = 72\n",
     "\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -1562,7 +1562,7 @@
     "\n",
     "Мы знаем, что тестовая выборка представляет из себя последние 10% по дате от всей выборки. \n",
     "Поэтому, воспользуясь функцией make_features_and_split с test_size=0.1 мы получим все ту же тестовую выборку\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -1755,7 +1755,7 @@
     "Для этого:\n",
     " - добавим в выборку одно наблюдение, соответствующее следующему часу\n",
     " - обучим модель на всей выборке (т.к. в данных используются данные часов, идущих непосредственно перед предсказанным значением), кроме одного нового наблюдения\n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -1933,7 +1933,7 @@
     "Модель удовлетворительно справляется с предсказанием колебпнии заказов от часа к часу, однако сглаживает сильные всплески и падения.\n",
     "    \n",
     "С ее помощью мы **предсказали значение заказов на следующий час: 229**\n",
-    "<div>"
+    "</div>"
    ]
   }
  ],
