--- a/13. Обучение модели классификации комментариев/13_toxic_comments.ipynb
+++ b/13. Обучение модели классификации комментариев/13_toxic_comments.ipynb
@@ -207,7 +207,7 @@
     "\n",
     "Для ускорения работы оставим в сообщениях только первые 2000 символов\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -491,7 +491,7 @@
     "\n",
     "Обучим несколько разных моделей и выберем лучшую.\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -842,7 +842,7 @@
     "    \n",
     "Проверим на тестовой выборке модели LogisticRegression и RandomForestClassifier.\n",
     "    \n",
-    "<div>"
+    "</div>"
    ]
   },
   {
@@ -940,7 +940,7 @@
     "Модель случайного леса подошла плохо\n",
     "    \n",
     "   \n",
-    "<div>"
+    "</div>"
    ]
   }
  ],
